update colors and fix some spacing

--- a/resources/assets/sass/_footer.scss
+++ b/resources/assets/sass/_footer.scss
@@ -19,7 +19,10 @@
     padding: 15px;
     &:link { color: $white; }
     &:visited { color: $white; }
-    &:hover { color: $accent; text-decoration: none; }
+    &:hover {
+      color: $accent;
+      text-decoration: none;
+    }
     &:active { color: $white; }
   }
 }
