--- a/resources/assets/sass/_navigation.scss
+++ b/resources/assets/sass/_navigation.scss
@@ -35,19 +35,22 @@
 .nav-item {
   border: 1px solid $white;
   box-shadow: 0 2px 4px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
-  background-color: $primary2;
+  background-color: $accent;
   display: flex;
   justify-content: center;
   align-items: center;
   height: 15em;
   &:hover {
-    background-color: $primary2;
+    background-color: $accent;
     opacity: 0.8;
   }
   a {
     &:link { color: $white; }
     &:visited { color: $white; }
-    &:hover { color: $white; text-decoration: none; }
+    &:hover {
+      color: $white;
+      text-decoration: none;
+    }
     &:active { color: $white; }
   }
 }
@@ -102,7 +105,7 @@
   z-index: 1;
   top: 0;
   left: 0;
-  background-color: $lt-gray;
+  background-color: $white;
   overflow-y: hidden;
   transition: 0.5s;
   display: flex;
@@ -127,6 +130,7 @@
     top: 2px;
     right: 30px;
     font-size: 45px;
+    color: $primary;
   }
 }
 .overlay-content {
