--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,10 +1,10 @@
 /* Colors */
-$primary: #34495E;
-$primary2: rgb(71, 182, 173);
-$accent: #FF8000;
-$gray: #85929E;
-$lt-gray: #ccc;
-$white: #fff;
+$primary: #666975;
+$primary2: #68C3D1;
+$accent: #EF8354;
+$gray: #ccc;
+$lt-gray: #D1D7D9;
+$white: #FEFFFE;
 
 /* Fonts */
 $primary-ft: "HelveticaNeue-Light", "Helvetica Neue Light", sans-serif;
